gen/com/intellij/lang/jsgraphql/endpoint/parser/JSGraphQLEndpointParser.java
// This is a generated file. Not intended for manual editing.
package com.intellij.lang.jsgraphql.endpoint.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.intellij.lang.jsgraphql.endpoint.JSGraphQLEndpointTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class JSGraphQLEndpointParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, EXTENDS_SETS_);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    if (root_ == ANNOTATION) {
      result_ = Annotation(builder_, 0);
    }
    else if (root_ == ANNOTATION_ARGUMENT_LIST_VALUE) {
      result_ = AnnotationArgumentListValue(builder_, 0);
    }
    else if (root_ == ANNOTATION_ARGUMENT_OBJECT_FIELD) {
      result_ = AnnotationArgumentObjectField(builder_, 0);
    }
    else if (root_ == ANNOTATION_ARGUMENT_OBJECT_VALUE) {
      result_ = AnnotationArgumentObjectValue(builder_, 0);
    }
    else if (root_ == ANNOTATION_ARGUMENT_VALUE) {
      result_ = AnnotationArgumentValue(builder_, 0);
    }
    else if (root_ == ANNOTATION_ARGUMENTS) {
      result_ = AnnotationArguments(builder_, 0);
    }
    else if (root_ == ANNOTATION_DEFINITION) {
      result_ = AnnotationDefinition(builder_, 0);
    }
    else if (root_ == ARGUMENTS_DEFINITION) {
      result_ = ArgumentsDefinition(builder_, 0);
    }
    else if (root_ == COMPOSITE_TYPE) {
      result_ = CompositeType(builder_, 0);
    }
    else if (root_ == ENUM_TYPE_DEFINITION) {
      result_ = EnumTypeDefinition(builder_, 0);
    }
    else if (root_ == ENUM_VALUE_DEFINITION) {
      result_ = EnumValueDefinition(builder_, 0);
    }
    else if (root_ == ENUM_VALUE_DEFINITION_SET) {
      result_ = EnumValueDefinitionSet(builder_, 0);
    }
    else if (root_ == FIELD_DEFINITION) {
      result_ = FieldDefinition(builder_, 0);
    }
    else if (root_ == FIELD_DEFINITION_SET) {
      result_ = FieldDefinitionSet(builder_, 0);
    }
    else if (root_ == IMPLEMENTS_INTERFACES) {
      result_ = ImplementsInterfaces(builder_, 0);
    }
    else if (root_ == IMPORT_DECLARATION) {
      result_ = ImportDeclaration(builder_, 0);
    }
    else if (root_ == IMPORT_FILE_REFERENCE) {
      result_ = ImportFileReference(builder_, 0);
    }
    else if (root_ == INPUT_OBJECT_TYPE_DEFINITION) {
      result_ = InputObjectTypeDefinition(builder_, 0);
    }
    else if (root_ == INPUT_VALUE_DEFINITION) {
      result_ = InputValueDefinition(builder_, 0);
    }
    else if (root_ == INPUT_VALUE_DEFINITION_IDENTIFIER) {
      result_ = InputValueDefinitionIdentifier(builder_, 0);
    }
    else if (root_ == INPUT_VALUE_DEFINITIONS) {
      result_ = InputValueDefinitions(builder_, 0);
    }
    else if (root_ == INTERFACE_TYPE_DEFINITION) {
      result_ = InterfaceTypeDefinition(builder_, 0);
    }
    else if (root_ == LIST_TYPE) {
      result_ = ListType(builder_, 0);
    }
    else if (root_ == NAMED_ANNOTATION_ARGUMENT) {
      result_ = NamedAnnotationArgument(builder_, 0);
    }
    else if (root_ == NAMED_ANNOTATION_ARGUMENTS) {
      result_ = NamedAnnotationArguments(builder_, 0);
    }
    else if (root_ == NAMED_TYPE) {
      result_ = NamedType(builder_, 0);
    }
    else if (root_ == NAMED_TYPE_DEF) {
      result_ = NamedTypeDef(builder_, 0);
    }
    else if (root_ == OBJECT_TYPE_DEFINITION) {
      result_ = ObjectTypeDefinition(builder_, 0);
    }
    else if (root_ == OPERATION_TYPE_DEFINITION) {
      result_ = OperationTypeDefinition(builder_, 0);
    }
    else if (root_ == OPERATION_TYPE_DEFINITION_SET) {
      result_ = OperationTypeDefinitionSet(builder_, 0);
    }
    else if (root_ == PROPERTY) {
      result_ = Property(builder_, 0);
    }
    else if (root_ == QUOTED_STRING) {
      result_ = QuotedString(builder_, 0);
    }
    else if (root_ == SCALAR_TYPE_DEFINITION) {
      result_ = ScalarTypeDefinition(builder_, 0);
    }
    else if (root_ == SCHEMA_DEFINITION) {
      result_ = SchemaDefinition(builder_, 0);
    }
    else if (root_ == STRING) {
      result_ = String(builder_, 0);
    }
    else if (root_ == UNION_MEMBER) {
      result_ = UnionMember(builder_, 0);
    }
    else if (root_ == UNION_MEMBER_SET) {
      result_ = UnionMemberSet(builder_, 0);
    }
    else if (root_ == UNION_TYPE_DEFINITION) {
      result_ = UnionTypeDefinition(builder_, 0);
    }
    else {
      result_ = parse_root_(root_, builder_, 0);
    }
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return Document(builder_, level_ + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ANNOTATION_ARGUMENT_LIST_VALUE, ANNOTATION_ARGUMENT_OBJECT_VALUE, ANNOTATION_ARGUMENT_VALUE),
  };

  /* ********************************************************** */
  // AT_ANNOTATION AnnotationArguments?
  public static boolean Annotation(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Annotation")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ANNOTATION, "<annotation>");
    result_ = consumeToken(builder_, AT_ANNOTATION);
    pinned_ = result_; // pin = 1
    result_ = result_ && Annotation_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, RecoverAnnotation_parser_);
    return result_ || pinned_;
  }

  // AnnotationArguments?
  private static boolean Annotation_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Annotation_1")) return false;
    AnnotationArguments(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // LBRACKET (AnnotationArgumentValue (COMMA AnnotationArgumentValue)*)? RBRACKET
  public static boolean AnnotationArgumentListValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentListValue")) return false;
    if (!nextTokenIs(builder_, LBRACKET)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ANNOTATION_ARGUMENT_LIST_VALUE, null);
    result_ = consumeToken(builder_, LBRACKET);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, AnnotationArgumentListValue_1(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, RBRACKET) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // (AnnotationArgumentValue (COMMA AnnotationArgumentValue)*)?
  private static boolean AnnotationArgumentListValue_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentListValue_1")) return false;
    AnnotationArgumentListValue_1_0(builder_, level_ + 1);
    return true;
  }

  // AnnotationArgumentValue (COMMA AnnotationArgumentValue)*
  private static boolean AnnotationArgumentListValue_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentListValue_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = AnnotationArgumentValue(builder_, level_ + 1);
    result_ = result_ && AnnotationArgumentListValue_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (COMMA AnnotationArgumentValue)*
  private static boolean AnnotationArgumentListValue_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentListValue_1_0_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!AnnotationArgumentListValue_1_0_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "AnnotationArgumentListValue_1_0_1", pos_)) break;
    }
    return true;
  }

  // COMMA AnnotationArgumentValue
  private static boolean AnnotationArgumentListValue_1_0_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentListValue_1_0_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && AnnotationArgumentValue(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // identifier (EQUALS | COLON) AnnotationArgumentValue
  public static boolean AnnotationArgumentObjectField(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentObjectField")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, IDENTIFIER);
    result_ = result_ && AnnotationArgumentObjectField_1(builder_, level_ + 1);
    result_ = result_ && AnnotationArgumentValue(builder_, level_ + 1);
    exit_section_(builder_, marker_, ANNOTATION_ARGUMENT_OBJECT_FIELD, result_);
    return result_;
  }

  // EQUALS | COLON
  private static boolean AnnotationArgumentObjectField_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentObjectField_1")) return false;
    boolean result_;
    result_ = consumeToken(builder_, EQUALS);
    if (!result_) result_ = consumeToken(builder_, COLON);
    return result_;
  }

  /* ********************************************************** */
  // LBRACE (AnnotationArgumentObjectField (COMMA AnnotationArgumentObjectField)*)? RBRACE
  public static boolean AnnotationArgumentObjectValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentObjectValue")) return false;
    if (!nextTokenIs(builder_, LBRACE)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ANNOTATION_ARGUMENT_OBJECT_VALUE, null);
    result_ = consumeToken(builder_, LBRACE);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, AnnotationArgumentObjectValue_1(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, RBRACE) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // (AnnotationArgumentObjectField (COMMA AnnotationArgumentObjectField)*)?
  private static boolean AnnotationArgumentObjectValue_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentObjectValue_1")) return false;
    AnnotationArgumentObjectValue_1_0(builder_, level_ + 1);
    return true;
  }

  // AnnotationArgumentObjectField (COMMA AnnotationArgumentObjectField)*
  private static boolean AnnotationArgumentObjectValue_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentObjectValue_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = AnnotationArgumentObjectField(builder_, level_ + 1);
    result_ = result_ && AnnotationArgumentObjectValue_1_0_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (COMMA AnnotationArgumentObjectField)*
  private static boolean AnnotationArgumentObjectValue_1_0_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentObjectValue_1_0_1")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!AnnotationArgumentObjectValue_1_0_1_0(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "AnnotationArgumentObjectValue_1_0_1", pos_)) break;
    }
    return true;
  }

  // COMMA AnnotationArgumentObjectField
  private static boolean AnnotationArgumentObjectValue_1_0_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentObjectValue_1_0_1_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, COMMA);
    result_ = result_ && AnnotationArgumentObjectField(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // TRUE | FALSE | number | QuotedString | AnnotationArgumentListValue | AnnotationArgumentObjectValue
  public static boolean AnnotationArgumentValue(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArgumentValue")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _COLLAPSE_, ANNOTATION_ARGUMENT_VALUE, "<annotation argument value>");
    result_ = consumeToken(builder_, TRUE);
    if (!result_) result_ = consumeToken(builder_, FALSE);
    if (!result_) result_ = consumeToken(builder_, NUMBER);
    if (!result_) result_ = QuotedString(builder_, level_ + 1);
    if (!result_) result_ = AnnotationArgumentListValue(builder_, level_ + 1);
    if (!result_) result_ = AnnotationArgumentObjectValue(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // LPAREN (AnnotationArgumentValue | NamedAnnotationArguments) RPAREN
  public static boolean AnnotationArguments(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArguments")) return false;
    if (!nextTokenIs(builder_, LPAREN)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ANNOTATION_ARGUMENTS, null);
    result_ = consumeToken(builder_, LPAREN);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, AnnotationArguments_1(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, RPAREN) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // AnnotationArgumentValue | NamedAnnotationArguments
  private static boolean AnnotationArguments_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationArguments_1")) return false;
    boolean result_;
    result_ = AnnotationArgumentValue(builder_, level_ + 1);
    if (!result_) result_ = NamedAnnotationArguments(builder_, level_ + 1);
    return result_;
  }

  /* ********************************************************** */
  // ANNOTATION_DEF NamedTypeDef ArgumentsDefinition?
  public static boolean AnnotationDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationDefinition")) return false;
    if (!nextTokenIs(builder_, ANNOTATION_DEF)) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ANNOTATION_DEFINITION, null);
    result_ = consumeToken(builder_, ANNOTATION_DEF);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, NamedTypeDef(builder_, level_ + 1));
    result_ = pinned_ && AnnotationDefinition_2(builder_, level_ + 1) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, null);
    return result_ || pinned_;
  }

  // ArgumentsDefinition?
  private static boolean AnnotationDefinition_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "AnnotationDefinition_2")) return false;
    ArgumentsDefinition(builder_, level_ + 1);
    return true;
  }

  /* ********************************************************** */
  // Annotation*
  static boolean Annotations(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Annotations")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!Annotation(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "Annotations", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // LPAREN InputValueDefinitions RPAREN
  public static boolean ArgumentsDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "ArgumentsDefinition")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARGUMENTS_DEFINITION, "<arguments definition>");
    result_ = consumeToken(builder_, LPAREN);
    pinned_ = result_; // pin = 1
    result_ = result_ && report_error_(builder_, InputValueDefinitions(builder_, level_ + 1));
    result_ = pinned_ && consumeToken(builder_, RPAREN) && result_;
    exit_section_(builder_, level_, marker_, result_, pinned_, RecoverArgumentsDefinition_parser_);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // COMMA EnumValueDefinition
  static boolean CommaEnumValueDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CommaEnumValueDefinition")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = consumeToken(builder_, COMMA);
    pinned_ = result_; // pin = 1
    result_ = result_ && EnumValueDefinition(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, RecoverCommaEnumValueDefinition_parser_);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // COMMA NamedAnnotationArgument
  static boolean CommaNamedAnnotationArgument(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CommaNamedAnnotationArgument")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = consumeToken(builder_, COMMA);
    pinned_ = result_; // pin = 1
    result_ = result_ && NamedAnnotationArgument(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, RecoverNamedAnnotationArgument_parser_);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // COMMA NamedType
  static boolean CommaNamedType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CommaNamedType")) return false;
    boolean result_, pinned_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = consumeToken(builder_, COMMA);
    pinned_ = result_; // pin = 1
    result_ = result_ && NamedType(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, pinned_, RecoverCommaNamedType_parser_);
    return result_ || pinned_;
  }

  /* ********************************************************** */
  // ListType | (NamedType REQUIRED?)
  public static boolean CompositeType(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CompositeType")) return false;
    if (!nextTokenIs(builder_, "<composite type>", IDENTIFIER, LBRACKET)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, COMPOSITE_TYPE, "<composite type>");
    result_ = ListType(builder_, level_ + 1);
    if (!result_) result_ = CompositeType_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // NamedType REQUIRED?
  private static boolean CompositeType_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CompositeType_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = NamedType(builder_, level_ + 1);
    result_ = result_ && CompositeType_1_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // REQUIRED?
  private static boolean CompositeType_1_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "CompositeType_1_1")) return false;
    consumeToken(builder_, REQUIRED);
    return true;
  }

  /* ********************************************************** */
  // ObjectTypeDefinition
  //     |
  //     InterfaceTypeDefinition
  //     |
  //     InputObjectTypeDefinition
  //     |
  //     EnumTypeDefinition
  //     |
  //     UnionTypeDefinition
  //     |
  //     ScalarTypeDefinition
  //     |
  //     ImportDeclaration
  //     |
  //     SchemaDefinition
  //     |
  //     AnnotationDefinition
  static boolean Definition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Definition")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_);
    result_ = ObjectTypeDefinition(builder_, level_ + 1);
    if (!result_) result_ = InterfaceTypeDefinition(builder_, level_ + 1);
    if (!result_) result_ = InputObjectTypeDefinition(builder_, level_ + 1);
    if (!result_) result_ = EnumTypeDefinition(builder_, level_ + 1);
    if (!result_) result_ = UnionTypeDefinition(builder_, level_ + 1);
    if (!result_) result_ = ScalarTypeDefinition(builder_, level_ + 1);
    if (!result_) result_ = ImportDeclaration(builder_, level_ + 1);
    if (!result_) result_ = SchemaDefinition(builder_, level_ + 1);
    if (!result_) result_ = AnnotationDefinition(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, RecoverDefinition_parser_);
    return result_;
  }

  /* ********************************************************** */
  // TYPE | INTERFACE | INPUT | ENUM | UNION | SCALAR | ANNOTATION_DEF | IMPORT | SCHEMA
  static boolean DefinitionKeyword(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "DefinitionKeyword")) return false;
    boolean result_;
    result_ = consumeToken(builder_, TYPE);
    if (!result_) result_ = consumeToken(builder_, INTERFACE);
    if (!result_) result_ = consumeToken(builder_, INPUT);
    if (!result_) result_ = consumeToken(builder_, ENUM);
    if (!result_) result_ = consumeToken(builder_, UNION);
    if (!result_) result_ = consumeToken(builder_, SCALAR);
    if (!result_) result_ = consumeToken(builder_, ANNOTATION_DEF);
    if (!result_) result_ = consumeToken(builder_, IMPORT);
    if (!result_) result_ = consumeToken(builder_, SCHEMA);
    return result_;
  }

  /* ********************************************************** */
  // Definition*
  static boolean Document(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "Document")) return false;
    while (true) {
      int pos_ = current_position_(builder_);
      if (!Definition(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "Document", pos_)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // Annotations? ENUM NamedTypeDef EnumValueDefinitionSet
  public static boolean EnumTypeDefinition(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "EnumTypeDefinition")) return false;
